Fix text-decoration for <del> tag
Browsers usually render a <del> tag with a strike-through. However,
strike-through makes the number of deletions in a file unreadable as
well as the number of additions is rendered with an underline. This
commit fixes the issue by using underline for the <del> tag.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,10 @@ dt {
   overflow-wrap: break-word;
 }
 
+del {
+  text-decoration: underline;
+}
+
 .tree-list {
   display: grid;
   // mode name
